--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "client-oauth2": "^4.3.3",
+    "jwt-decode": "^3.1.2",
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
