--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,10 @@ jobs:
         run: yarn install
 
       - name: Lint
-        run: npx eslint src --ext .ts
+        run: npx eslint src/ tests/ --ext .ts
 
       - name: Build
         run: npx tsc
+      
+      - name: Test
+        run: npx jest
