--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
   "author": "Maël Gangloff <contact@maelgangloff.fr>",
   "license": "ISC",
   "scripts": {
-    "build": "npx tsc -p tsconfig.json",
-    "lint": "npx eslint src/ --ext .ts",
-    "doc": "npx jsdoc2md -f dist/index.js > README.md"
+    "build": "tsc -p tsconfig.json",
+    "lint": "eslint src/ tests/ --ext .ts",
+    "test": "jest",
+    "doc": "jsdoc2md -f dist/index.js > README.md"
   },
   "dependencies": {
     "axios": "^1.3.5",
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
+    "jest": "^29.5.0",
     "jsdoc-to-markdown": "^8.0.0",
+    "ts-jest": "^29.1.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.4"
   },
