--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint src/ tests/ --ext .ts",
     "test": "jest",
-    "doc": "jsdoc2md -f dist/index.js > README.md"
+    "doc": "jsdoc2md --template docs/README.hbs -f dist/index.js > README.md"
   },
   "dependencies": {
     "axios": "^1.3.5",
