--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scolengo-api",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "types": "types/index.d.ts",
   "homepage": "https://github.com/maelgangloff/scolengo-api#readme",
   "bugs": {
@@ -13,7 +13,7 @@
     "url": "https://github.com/maelgangloff/scolengo-api.git"
   },
   "author": "Maël Gangloff <contact@maelgangloff.fr>",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "eslint src/ tests/ --ext .ts",
