--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint src/ tests/ --ext .ts",
+    "lint": "eslint src/ --ext .ts",
     "test": "jest",
     "doc": "jsdoc2md --template docs/README.hbs -f dist/index.js > README.md"
   },
@@ -27,8 +27,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "jsdoc-to-markdown": "^8.0.0",
