--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn install
 
       - name: Lint
-        run: npx eslint src/ tests/ --ext .ts
+        run: npx eslint src/ --ext .ts
 
       - name: Build
         run: npx tsc
