--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "lint": "eslint src/ --ext .ts",
-    "test": "tsd --files tests/",
+    "test": "jest",
     "doc": "jsdoc2md --template docs/README.hbs -f dist/index.js > README.md"
   },
   "dependencies": {
@@ -25,11 +25,13 @@
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
+    "jest": "^29.5.0",
     "jsdoc-to-markdown": "^8.0.0",
+    "ts-jest": "^29.1.0",
     "ts-standard": "^12.0.2",
-    "tsd": "^0.28.1",
     "typescript": "^5.0.4"
   },
   "keywords": [
