--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "jsonapi-fractal": "^2.3.1",
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
