--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
+
+      - name: Install Dependencies
+        run: yarn install
+
       - name: Lint
         run: npx eslint src/ --ext .ts
 
