--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src/"
-  ]
+  "exclude": ["node_modules"],
+  "include": ["src/"]
 }
