--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
     "extends": "standard-with-typescript",
     "parserOptions": {
         "project": "./tsconfig.json"
+    },
+    "rules": {
+        "@typescript-eslint/consistent-type-imports": "error"
     }
 }
