chore: export type instead of export

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
         "project": "./tsconfig.json"
     },
     "rules": {
-        "@typescript-eslint/consistent-type-imports": "error"
+        "@typescript-eslint/consistent-type-imports": "error",
+        "@typescript-eslint/consistent-type-exports": "error"
     }
 }
