--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
-    "jsonapi-fractal": "^2.3.1",
+    "jsonapi-fractal": "^2.3.1"
+  },
+  "optionalDependencies": {
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
