--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   },
   "dependencies": {
     "axios": "^1.3.5",
+    "base-64": "^1.0.0",
     "jsonapi-fractal": "^2.3.1"
   },
   "optionalDependencies": {
     "openid-client": "^5.4.0"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.10.6",
     "eslint": "^8.38.0",
