--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint src/ --ext .ts",
+    "lint": "eslint src/ test/ --ext .ts",
+    "test": "jest",
     "doc": "jsdoc2md --template docs/README.hbs -f dist/index.js > README.md"
   },
   "dependencies": {
@@ -41,12 +42,14 @@
   },
   "devDependencies": {
     "@types/base-64": "^1.0.2",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.10.6",
+    "ajv": "^8.13.0",
     "eslint": "^8.38.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "jsdoc-to-markdown": "^8.0.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.2",
+    "ts-json-schema-generator": "^2.1.1",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.4"
   },
