--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "extends": "standard-with-typescript",
     "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": ["./tsconfig.json", "./tsconfig.test.json"]
     },
     "rules": {
         "@typescript-eslint/consistent-type-imports": "error",
